model done, view in process

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>BankView.qml</file>
         <file>BankViewHeader.qml</file>
         <file>BankViewDescription.qml</file>
+        <file>Empty.qml</file>
     </qresource>
 </RCC>
